--- a/.github/workflows/build-apk-from-zip.yml
+++ b/.github/workflows/build-apk-from-zip.yml
@@ -35,7 +35,8 @@ jobs:
         run: |
           cd "${{ steps.findroot.outputs.root }}"
           patch -p1 < "${{ github.workspace }}/engitrack-capacitor-native-csv-share-clipboard.patch"
-                - name: Repair package.json (remove patch header junk)
+
+      - name: Repair package.json
         run: |
           python3 - <<'PY'
           from pathlib import Path
@@ -43,9 +44,8 @@ jobs:
           s = p.read_text(encoding="utf-8", errors="ignore")
           last = s.rfind("}")
           if last == -1:
-            raise SystemExit("package.json has no closing brace")
-          fixed = s[:last+1].strip() + "\n"
-          p.write_text(fixed, encoding="utf-8")
+              raise SystemExit("package.json has no closing brace")
+          p.write_text((s[:last+1].strip() + "\n"), encoding="utf-8")
           print("package.json repaired")
           PY
 
