--- a/.github/workflows/build-apk-from-zip.yml
+++ b/.github/workflows/build-apk-from-zip.yml
@@ -57,6 +57,13 @@ jobs:
           cd "${{ steps.findroot.outputs.root }}"
           patch -p1 < "${{ github.workspace }}/engitrack-fix-csv-dayoff-nosettings.patch"
 
+      # >>> ADD THIS STEP <<<
+      - name: Remove dedicated email bar (UI only, safe)
+        run: |
+          cd "${{ steps.findroot.outputs.root }}"
+          patch -p1 < "${{ github.workspace }}/engitrack-remove-email-ui-safe.patch"
+      # >>> END ADD <<<
+
       - name: VERIFY CSV code is present (fail build if not)
         run: |
           set -e
@@ -65,7 +72,9 @@ jobs:
           grep -n "Filesystem\.writeFile" client/src/pages/Home.tsx
           grep -n "@capacitor/filesystem" client/src/pages/Home.tsx
           grep -n "@capacitor/share" client/src/pages/Home.tsx
-          echo "OK: Native CSV export code found."
+          echo "Checking email bar is removed..."
+          ! grep -n "Dedicated Email" client/src/pages/Home.tsx
+          echo "OK: Native CSV export code found and email bar removed."
 
       - name: Build web app
         working-directory: ${{ steps.findroot.outputs.root }}
