--- a/.github/workflows/build-apk-from-zip.yml
+++ b/.github/workflows/build-apk-from-zip.yml
@@ -74,30 +74,11 @@ jobs:
           set -e
           CSS_FILE="${{ steps.findroot.outputs.root }}/client/src/index.css"
           test -f "$CSS_FILE"
-          # Prevent duplicate insertion
           if grep -q "sos-watermark.png" "$CSS_FILE"; then
             echo "Watermark CSS already present; skipping"
             exit 0
           fi
-          cat >> "$CSS_FILE" <<'EOF'
-
-/* SOS watermark background */
-body::before {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: url("/sos-watermark.png");
-  background-repeat: no-repeat;
-  background-position: top center;
-  background-size: 300px;
-  opacity: 0.06;
-  pointer-events: none;
-  z-index: 0;
-}
-EOF
+          printf '\n/* SOS watermark background */\nbody::before {\n  content: "";\n  position: fixed;\n  top: 0;\n  left: 0;\n  width: 100%%;\n  height: 100%%;\n  background-image: url("/sos-watermark.png");\n  background-repeat: no-repeat;\n  background-position: top center;\n  background-size: 300px;\n  opacity: 0.06;\n  pointer-events: none;\n  z-index: 0;\n}\n' >> "$CSS_FILE"
 
       - name: VERIFY CSV code is present
         run: |
