--- a/.github/workflows/build-apk-from-zip.yml
+++ b/.github/workflows/build-apk-from-zip.yml
@@ -62,27 +62,72 @@ jobs:
           cd "${{ steps.findroot.outputs.root }}"
           patch -p1 < "${{ github.workspace }}/engitrack-remove-email-ui-safe.patch"
 
-      - name: Hide unpaid break box (runtime hide via index.html, safest)
+      - name: Hide unpaid break box (safe source edit, auto-find)
         run: |
           set -e
           ROOT="${{ steps.findroot.outputs.root }}"
+          cd "$ROOT"
 
-          HTML="$ROOT/client/index.html"
-          if [ ! -f "$HTML" ]; then
-            HTML="$ROOT/index.html"
-          fi
-
-          if [ ! -f "$HTML" ]; then
-            echo "ERROR: Could not find index.html to inject unpaid-break hider"
-            exit 1
-          fi
-
-          if grep -q "__HIDE_UNPAID_BREAK__" "$HTML"; then
-            echo "Unpaid break hide script already present; skipping"
+          # Find the file containing the Unpaid Break UI
+          TARGET="$(find client/src -type f \( -name '*.tsx' -o -name '*.ts' \) -print0 | xargs -0 grep -l -E 'Unpaid Break|unpaidBreak' | head -n 1 || true)"
+          if [ -z "$TARGET" ]; then
+            echo "WARNING: Could not find Unpaid Break in client/src; skipping"
             exit 0
           fi
+          echo "Editing unpaid break in: $TARGET"
 
-          perl -0777 -i -pe 's@</body>@<script id="__HIDE_UNPAID_BREAK__">\n(function(){\n  function hideUnpaidBreak(){\n    try {\n      var nodes = Array.from(document.querySelectorAll(\"label,div,span,p\"));\n      for (var i=0;i<nodes.length;i++){\n        var t = (nodes[i].textContent||\"\").toLowerCase();\n        if (t.includes(\"unpaid\") && t.includes(\"break\")){\n          var c = nodes[i].closest(\"div\");\n          if (c) c.style.display = \"none\";\n        }\n      }\n    } catch(e) {}\n  }\n  if (document.readyState === \"loading\"){\n    document.addEventListener(\"DOMContentLoaded\", hideUnpaidBreak);\n  } else {\n    hideUnpaidBreak();\n  }\n  setTimeout(hideUnpaidBreak, 500);\n  setTimeout(hideUnpaidBreak, 1500);\n})();\n</script>\n</body>@s' "$HTML"
+          python3 - "$TARGET" <<'PY'
+          import sys, re
+          from pathlib import Path
+
+          target = Path(sys.argv[1])
+          s = target.read_text(encoding="utf-8")
+
+          if "__HIDE_UNPAID_BREAK__" in s:
+            print("Already hidden; skipping")
+            sys.exit(0)
+
+          # Find the first occurrence of the label text
+          m = re.search(r"<label[^>]*>[^<]*Unpaid\s*Break[^<]*</label>", s, flags=re.I)
+          if not m:
+            print("WARNING: Unpaid Break label not found in target; skipping")
+            sys.exit(0)
+
+          # Find nearest container <div ...> before label
+          start = s.rfind("<div", 0, m.start())
+          if start == -1:
+            print("WARNING: Could not find container <div>; skipping")
+            sys.exit(0)
+
+          # Find matching </div> for that container (stack scan)
+          i = start
+          depth = 0
+          end = -1
+          while i < len(s):
+            if s.startswith("<div", i):
+              depth += 1
+              i += 4
+              continue
+            if s.startswith("</div>", i):
+              depth -= 1
+              i += 6
+              if depth == 0:
+                end = i
+                break
+              continue
+            i += 1
+
+          if end == -1:
+            print("WARNING: Could not find matching </div>; skipping")
+            sys.exit(0)
+
+          block = s[start:end]
+          replacement = "{/* __HIDE_UNPAID_BREAK__ */}\n{false && (\n" + block + "\n)}"
+          s2 = s[:start] + replacement + s[end:]
+
+          target.write_text(s2, encoding="utf-8")
+          print("OK: Unpaid Break UI hidden in", target)
+          PY
 
       - name: Copy watermark image into app public folder
         run: |
